--- a/update-weather-data.yml
+++ b/update-weather-data.yml
@@ -1,8 +1,8 @@
 name: Update Weather Data
 on:
   schedule:
-    - cron: '0 * * * *'  
-  workflow_dispatch: 
+    - cron: '0 0 * * *'  
+  workflow_dispatch:  
 
 jobs:
   update-weather-data:
